[package]
name = "ip2proxy"
version = "2.0.1" # remember to update changelog and html_root_url
description = "Probe IP2Proxy BIN data files"
repository = "https://github.com/niklasf/ip2proxy-rust"
readme = "README.md"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
license = "MIT OR Apache-2.0"
keywords = ["ip", "proxy", "geolocation"]
categories = ["web-programming", "parser-implementations"]
edition = "2021"

[dependencies]
positioned-io = "0.3"
byteorder = "1"
bitflags = "1"
serde = { version = "1", features = ["derive"], optional = true }

[package.metadata.docs.rs]
features = ["serde"]
