[package]
name = "ip2proxy"
version = "3.0.0" # remember to update changelog
description = "Probe IP2Proxy BIN data files"
repository = "https://github.com/niklasf/ip2proxy-rust"
readme = "README.md"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
license = "MIT OR Apache-2.0"
keywords = ["ip", "proxy", "geolocation"]
categories = ["web-programming", "parser-implementations"]
edition = "2024"
rust-version = "1.85"

[dependencies]
positioned-io = "0.3"
byteorder = "1"
bitflags = "2"
serde = { version = "1", features = ["derive"], optional = true }

[package.metadata.docs.rs]
features = ["serde"]
